--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "@strapi/plugin-cloud": "4.17.1",
     "@strapi/plugin-i18n": "4.17.1",
     "@strapi/plugin-users-permissions": "4.17.1",
+    "@strapi/provider-upload-aws-s3": "^4.19.0",
     "@strapi/strapi": "4.17.1",
     "pg": "8.8.0",
     "react": "^18.0.0",
