--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,39 @@
 version: "3"
 services:
+  frontend:
+    container_name: frontend
+    build:
+      context: ./frontend 
+    restart: on-failure
+    env_file: 
+      - ./frontend/.env
+    volumes:
+      - ./frontend/public:/frontend/app/public
+      - ./frontend/src:/frontend/app/src
+      - ./frontend/.env:/frontend/app/.env
+      - ./frontend/.eslintrc.json:/frontend/app/.eslintrc.json
+      - ./frontend/.gitignore:/frontend/app/.gitignore
+      - ./frontend/next.config.mjs:/frontend/app/next.config.mjs
+      - ./frontend/package-lock.json:/frontend/package-lock.json
+      - ./frontend/package.json:/frontend/package.json
+      - ./frontend/postcss.config.js:/frontend/postcss.config.js
+      - ./frontend/README.md:/frontend/README.md
+      - ./frontend/tailwind.config.ts:/frontend/tailwind.config.ts
+      - ./frontend/tsconfig.json:/frontend/tsconfig.json
+    ports:
+      - "3000:3000"
+    networks:
+      - guanaquitos
+    depends_on:
+      - backend
+
   backend:
     container_name: backend
     build:
       context: ./backend
     restart: unless-stopped
-    env_file: .env
-    environment:
-      DATABASE_CLIENT: ${DATABASE_CLIENT}
-      DATABASE_HOST: postgres
-      DATABASE_PORT: ${DATABASE_PORT}
-      DATABASE_NAME: ${DATABASE_NAME}
-      DATABASE_USERNAME: ${DATABASE_USERNAME}
-      DATABASE_PASSWORD: ${DATABASE_PASSWORD}
-      JWT_SECRET: ${JWT_SECRET}
-      ADMIN_JWT_SECRET: ${ADMIN_JWT_SECRET}
-      APP_KEYS: ${APP_KEYS}
-      NODE_ENV: ${NODE_ENV}
+    env_file: 
+      - ./backend/.env
     volumes:
       - ./backend/config:/backend/app/config
       - ./backend/src:/backend/app/src
@@ -34,12 +51,9 @@ services:
   postgres:
     container_name: postgres
     restart: unless-stopped
-    env_file: .env
+    env_file:
+      - ./backend/.env
     image: postgres:16.1-alpine3.18
-    environment:
-      POSTGRES_USER: ${DATABASE_USERNAME}
-      POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
-      POSTGRES_DB: ${DATABASE_NAME}
     volumes:
       - postgres-data:/var/lib/postgresql/data/ #using a volume
       - ./data:/var/lib/postgresql/data/ # if you want to use a bind folder
