--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
     "strapi": "strapi"
   },
   "dependencies": {
+    "@amicaldo/strapi-google-maps": "^1.1.4",
     "@strapi/plugin-cloud": "4.17.1",
     "@strapi/plugin-graphql": "^4.17.1",
     "@strapi/plugin-i18n": "4.17.1",
