✨ add apollo client to frontend

--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -27,6 +27,7 @@ yarn-error.log*
 
 # local env files
 .env*.local
+.env*
 
 # vercel
 .vercel
@@ -37,8 +38,11 @@ next-env.d.ts
 
 .swc
 
-#storybook
+# storybook
 storybook-static
 
-#typedoc
+# typedoc
 docs
+
+# codegen
+src/gql
