--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -19,6 +19,7 @@
     "no-restricted-exports": "off",
     "consistent-return": "off",
     "no-unused-vars": "off",
-    "@typescript-eslint/no-unused-vars": "off"
+    "@typescript-eslint/no-unused-vars": "off",
+    "import/no-extraneous-dependencies": ["error", { "devDependencies": true }]
   }
 }
