--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,10 +21,14 @@
   },
   "dependencies": {
     "@apollo/client": "^3.9.4",
+    "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.7",
     "@mui/material": "^5.15.7",
+    "@mui/material-nextjs": "^5.15.11",
+    "@react-google-maps/api": "^2.19.3",
+    "@strapi/blocks-react-renderer": "^1.0.0",
     "graphql": "^16.8.1",
     "next": "14.1.0",
     "pg-connection-string": "^2.6.2",
