--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "@mui/material-nextjs": "^5.15.11",
     "@react-google-maps/api": "^2.19.3",
     "@strapi/blocks-react-renderer": "^1.0.0",
+    "date-fns": "^3.6.0",
     "graphql": "^16.8.1",
     "next": "14.1.0",
     "pg-connection-string": "^2.6.2",
