--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,7 +34,8 @@
     "next": "14.1.0",
     "pg-connection-string": "^2.6.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-player": "^2.16.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.2",
