:sparkles: Update npm dependencies and add pinecone integration for career lifecycles

--- a/backend/package.json
+++ b/backend/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "@amicaldo/strapi-google-maps": "^1.1.4",
+    "@langchain/pinecone": "^0.0.7",
+    "@pinecone-database/pinecone": "^2.2.2",
     "@strapi/plugin-cloud": "4.17.1",
     "@strapi/plugin-graphql": "^4.17.1",
     "@strapi/plugin-i18n": "4.17.1",
     "@strapi/plugin-users-permissions": "4.17.1",
     "@strapi/provider-upload-aws-s3": "^4.19.0",
     "@strapi/strapi": "4.24.3",
+    "langchain": "^0.2.4",
     "pg": "8.8.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
