--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@amicaldo/strapi-google-maps": "^1.1.4",
+    "@langchain/community": "^0.2.5",
     "@langchain/pinecone": "^0.0.7",
     "@pinecone-database/pinecone": "^2.2.2",
     "@strapi/plugin-cloud": "4.17.1",
