--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,13 +21,24 @@ jobs:
 
       - name: Install packages
         run: npm ci
+        working-directory: frontend
+
       - name: Run TypeScript checks
         run: npm run ci:types
+        working-directory: frontend
+
       - name: Run lint checks
         run: npm run ci:lint
+        working-directory: frontend
+
       - name: Run format checks
         run: npm run ci:types
+        working-directory: frontend
+
       - name: Run unit tests
         run: npm run ci:tests
+        working-directory: frontend
+
       - name: Run build
         run: npm run build
+        working-directory: frontend
